# dstoolkit-time-series-forecasting

./: .flake8  .markdownlint.yml  CONTRIBUTING.md  README.md  SUPPORT.md  pyproject.toml  setup.cfg  setup.py
data/dominicks_oj_data/: create_oj_data_small.py  dominicks_oj_small.csv  dominicks_oj_staggered.csv  holidays_1990_to_1993.json
docs/: README.md  coding_standards.md  how_to_add_models_to_the_framework.md  how_to_add_models_to_the_tsfa.md  ml_lifecycle.md  setup_local_environment.md  testing_changes_to_TSFA.md  testing_changes_to_the_framework.md  troubleshooting.md
docs/decisions/: 0001_prophet_holidays_as_regressors.md  0002_features_lags.md  0003_versioning_strategy.md  0004_branching_strategy.md  0005_wheel_ship_approach.md  0006_framework_extensibility.md  0006_tsfa_extensibility.md  0007_frequency_of_regression_testing.md  README.md  adr_template.md
docs/research_and_references/: README.md  hyperparameter_tuning_part_1_methods.md  hyperparameter_tuning_part_2_implementation.md  model_experimentation_and_evaluation_recommendations.md  prophet_holiday_experimentation.md  resources_and_references.md
notebooks/configs/: README.md  create_prophet_config.py  create_random_forest_config.py  create_rolling_mean_config.py  create_simple_exponential_smoothing_config.py
notebooks/how_to_use_tsfa/: README.md  run_ml_experiment_mlflow.py  using_ml_experiment.py  using_ml_experiment_with_error_analysis.py  using_mllib_regressor.py  using_your_own_df_for_tsfa.py
tests/: README.md  conftest.py
tsfa/: ml_experiment.py
tsff/: ml_experiment.py
(+87 files in other folders)
